
#ifndef CONSOLEAPP_BOOKINGVIEW_H
#define CONSOLEAPP_BOOKINGVIEW_H

#include "BookingController.h"

class BookingView {
private:
    BookingController controller;

public:
    void displayBookingInterface();
};

#endif //CONSOLEAPP_BOOKINGVIEW_H
